# groundwork-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
groundwork/: __init__.py  build_map.py  cli.py  indexer.py  planner.py
tests/: test_dossier.py
