[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "groundwork-cli"
version = "0.1.0"
description = "Map + plan any repo or local codebase — a standalone recon → map → plan pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
gw = "groundwork.cli:main"

[tool.setuptools]
packages = ["groundwork"]

[tool.setuptools.package-data]
groundwork = ["assets/*.js"]
